--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "platzi-intro-react-base",
-  "version": "0.1.0",
+  "name": "Raki-Todo-Project",
+  "version": "0.1.1",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19",
+    "react-dom": "^19",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
