--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "Raki-Todo-Project",
+  "homepage": "http://afelopez.github.io/ratopro",
+  "name": "raki-todo-project",
   "version": "0.1.1",
   "dependencies": {
     "react": "^19",
@@ -9,6 +10,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deply": "gh-pages -d build",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
@@ -28,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
